Changed vertical-align of td element to 'top', fixing alignment issues in a particular article

--- a/src/styles/styles.styl
+++ b/src/styles/styles.styl
@@ -93,6 +93,10 @@ header {
   }
 }
 
+td {
+  vertical-align: top;
+}
+
 #main {
   clearfix();
   margin-top: 40px;
